--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,10 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <!--initalize parse-->  
+    <script src="//www.parsecdn.com/js/parse-1.6.4.min.js"></script>
+    <!--import jquery--> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
