Update user interface

--- a/www/index.html
+++ b/www/index.html
@@ -7,9 +7,9 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <!--initalize parse-->  
+    <!--initalize parse-->
     <script src="//www.parsecdn.com/js/parse-1.6.4.min.js"></script>
-    <!--import jquery--> 
+    <!--import jquery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -23,7 +23,7 @@
   </head>
   <body ng-app="bcgermanclub">
 
-    <ion-nav-bar class="bar-assertive">
+    <ion-nav-bar class="bar-dark">
       <ion-nav-back-button>
       </ion-nav-back-button>
     </ion-nav-bar>
