changed the css a bit

--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
   </head>
   <body ng-app="bcgermanclub">
 
-    <ion-nav-bar class="bar-dark">
+    <ion-nav-bar class="bar-calm">
       <ion-nav-back-button>
       </ion-nav-back-button>
     </ion-nav-bar>
