--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="bcgermanclub">
+<html lang="en" ng-app="bcgc">
 
 <head>
 
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 
   <!-- Custom Fonts -->
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
 
   <!-- Plugin CSS -->
@@ -122,7 +122,7 @@
     </div>
   </section>
 
-  <section class="bg-dark" id="events" ng-controller="clubevents">
+  <section class="bg-dark" id="events" ng-controller="eventsCtrl">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
