--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
   <script src="js/creative.js"></script>
 
   <!-- Initialize Parse -->
-  <script src="//www.parsecdn.com/js/parse-1.6.4.min.js"></script>
+  <script src="lib/parse/parse.min.js"></script>
 
   <!-- Angular JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
