--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     </div>
   </section>
 
-  <section class="bg-dark" id="contact">
+  <section class="bg-dark" id="contact" ng-controller="emailcontrol">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -188,20 +188,52 @@
           <hr class="primary">
           <p>If you’d like us to email you when we have a club event coming up, stick your address here. We won’t email you for any other reason or share your address with anyone else.</p>
         </div>
-
-        <form class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 text-center">
+<!--orogional code--> 
+       <!-- <form class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 text-center">
           <div class="form-group">
             <input type="email" class="form-control" id="inputEmail" placeholder="Email">
           </div>
-          <button type="submit" class="btn btn-danger">Sign Me Up</button>
-        </form>
+          <button type="submit" class="btn btn-danger" ng-click="clickme()">Sign Me Up</button>
+        </form>--> 
+
+
+
+<!--stripped down code from mail chimp--> 
+<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+
+<div id="mc_embed_signup">
+<form action="//bcgermanclub.us12.list-manage.com/subscribe/post?u=a5f5e5f2df85deebd47087207&amp;id=6fb66a0888" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+  
+  <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="email address" required>
+   
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a5f5e5f2df85deebd47087207_6fb66a0888" tabindex="-1" value="">
+    </div>
+
+    <div class="clear">
+    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-danger">
+    </div>
+    </div>
+
+</form>
+</div>
+
+
 
         <div class="email-add col-lg-8 col-lg-offset-2 text-center">
           <p class="text-faded">Or, if you prefer, you can email us at <a href="mailto:mail@bcgermanclub.com">Mail@BCGermanClub.com</a></p>
         </div>
       </div>
     </div>
+
+
   </section>
+
+
+
+<!--End mc_embed_signup-->
+
+
 
   <!-- jQuery -->
   <script src="js/jquery.js"></script>
@@ -223,6 +255,7 @@
   <!-- Angular JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
   <script src="js/app.js"></script>
+ 
 
 </body>
 
