--- a/index.html
+++ b/index.html
@@ -188,43 +188,20 @@
           <hr class="primary">
           <p>If you’d like us to email you when something is coming up, stick your address here. We won’t email you for any other reason or share your address with anyone else.</p>
         </div>
-<!--orogional code--> 
-       <!-- <form class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 text-center">
-          <div class="form-group">
-            <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-          </div>
-<<<<<<< HEAD
-          <button type="submit" class="btn btn-danger" ng-click="clickme()">Sign Me Up</button>
-        </form>--> 
-
-
-
-<!--stripped down code from mail chimp--> 
-<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-
-<div id="mc_embed_signup">
-<form action="//bcgermanclub.us12.list-manage.com/subscribe/post?u=a5f5e5f2df85deebd47087207&amp;id=6fb66a0888" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-  
-  <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="email address" required>
-   
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a5f5e5f2df85deebd47087207_6fb66a0888" tabindex="-1" value="">
-    </div>
-
-    <div class="clear">
-    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-danger">
-    </div>
-    </div>
-
-</form>
-</div>
-
-
-=======
-          <button type="submit" class="btn btn-danger">Sign Me Up</button>
-        </form>
       </div>
->>>>>>> b4551f07e6fa54a7887d0ff247586af7e9585479
+
+      <div class="row">
+        <div id="mc_embed_signup">
+          <form action="//bcgermanclub.us12.list-manage.com/subscribe/post?u=a5f5e5f2df85deebd47087207&amp;id=6fb66a0888" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 text-center" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+              <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email Address" required>
+              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a5f5e5f2df85deebd47087207_6fb66a0888" tabindex="-1" value="">
+              </div>
+              <input type="submit" value="Sign Me Up" name="subscribe" id="mc-embedded-subscribe" class="btn btn-danger">
+            </div>
+          </form>
+        </div>
+      </div>
 
       <div class="row">
         <div class="email-add col-lg-8 col-lg-offset-2 text-center">
@@ -235,12 +212,6 @@
 
 
   </section>
-
-
-
-<!--End mc_embed_signup-->
-
-
 
   <!-- jQuery -->
   <script src="js/jquery.js"></script>
@@ -262,7 +233,6 @@
   <!-- Angular JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
   <script src="js/app.js"></script>
- 
 
 </body>
 
